# Quantitative_fairness

./: .gitattributes  .gitignore  IIA_scottish.py  LICENSE  README.md  Voting_rules.py  collect_stats_BT.py  collect_stats_scottish.py  create_scottish_outputs.py  create_sigma_output.py  experiment.ipynb  experiment_notebook.ipynb  experiments_NY_mayoral.ipynb  experiments_main.ipynb  fairness_metric.py  generate_BT_profiles.py  helper_functions.py  pyproject.toml  run_BT_pipeline.sh  run_ny_pipeline.sh  run_portland_pipeline.sh  run_scottish_pipeline.sh  setup.sh  setup_data.sh  test_fairness_metric.py  voting_rules.py
data/: .gitignore  NY_mayor_cleaned_votekit.csv  Portland_D1_cleaned_votekit.csv  Portland_D2_cleaned_votekit.csv  Portland_D3_cleaned_votekit.csv  Portland_D4_cleaned_votekit.csv
notebooks/: README.md  collect_stats.ipynb  experiments_portland_elections.ipynb  experiments_scottish.ipynb  fairness_metric.py  run_over_scot.ipynb  scottish_plots.ipynb  sigma_plots.ipynb
notebooks/from_previous_votekit_version/: Voting_rules.py  experiments_main.ipynb
other_files/: clean_ny_data.py  clean_portland_data.py
pipelines/NY/: collect_stats_ny.py
pipelines/bradley-terry/: collect_stats_BT.py  create_sigma_output.py  (+1 more)
scot-elex-main/: .gitignore  README.md  blt_to_csv.py
scottish_stats/: 2-approval_output.json  2-approval_stats.json  3-approval_output.json  3-approval_stats.json  borda_output.json  borda_stats.json  plurality_output.json  plurality_stats.json  scottish_stats_all.csv  stv_output.json  stv_stats.json
stats/: .gitignore
(+3871 files in other folders)
