[project]
name = "Quantitative_fairness"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.2.1",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "joblib>=1.5.1",
    "joblib-progress>=1.0.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pytest>=8.4.1",
    "scipy>=1.16.1",
    "sortedcontainers>=2.4.0",
    "tqdm>=4.67.1",
    "votekit>=3.2.2",
]

